<resources>
    <string name="app_name">XposedSmsCode</string>
    <string name="xposed_description">Extract code from new SMS message and copy it to clipboard. It can also Auto-input SMS code</string>
    <string name="i_know">I see</string>
    <string name="ignore">Ignore</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">OK</string>
    <string name="pref_general_title">General</string>
    <string name="pref_enable_title">Main switch</string>
    <string name="enable_module_title">Module inactive</string>
    <string name="enable_module_message">Please activate this module, or this App won\'t work!</string>
    <string name="pref_enable_summary">Module active</string>
    <string name="pref_enable_summary_alt">Please activate this module first!</string>
    <string name="open_xposed_installer">Open Xposed Installer</string>
    <string name="pref_hide_launcher_icon_title">Hide launcher icon</string>
    <string name="pref_hide_launcher_icon_summary">You can reopen this App in Xposed modules</string>
    <string name="pref_choose_theme_title">Theme</string>
    <string name="module_status_active">Active</string>
    <string name="module_status_inactive">Inactive</string>
    <string name="pref_sms_code_title">SMS Code</string>
    <string name="pref_show_toast_title">Show toast</string>
    <string name="pref_show_toast_summary">Show toast when the SMS code is copied</string>
    <string name="pref_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="pref_copy_to_clipboard_summary">Copy code to clipboard if it\'s extracted</string>
    <string name="pref_block_sms_title">Block code SMS</string>
    <string name="pref_block_sms_summary">Warning! Code SMS will be blocked if extract succeed, message app won\'t receive it</string>
    <string name="pref_deduplicate_sms_title">Filter duplicate SMS</string>
    <string name="pref_deduplicate_sms_summary">Filter out duplicate code SMS</string>
    <string name="pref_category_auto_input_title">Auto Input</string>
    <string name="pref_enable_auto_input_code_title">Auto input SMS code</string>
    <string name="pref_enable_auto_input_code_summary">Try to input SMS code automatically</string>
    <string name="pref_auto_input_code_delay_title">Auto input delay</string>
    <string name="pref_auto_input_code_delay_summary">Delay %ss</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_show_code_notification_title">Show notification</string>
    <string name="pref_show_code_notification_summary">Show notification when the SMS code is extracted</string>
    <string name="pref_auto_cancel_notification_title">Auto cancel notification</string>
    <string name="pref_auto_cancel_notification_summary">Auto cancel SMS code notification</string>
    <string name="pref_notification_retention_time_title">Notification retention time</string>
    <string name="pref_notification_retention_time_summary">%s</string>
    <string name="notification_retention_time_5_secs_entry">5 s</string>
    <string name="notification_retention_time_10_secs_entry">10 s</string>
    <string name="notification_retention_time_30_secs_entry">30 s</string>
    <string name="notification_retention_time_1_min_entry">1 min</string>
    <string name="notification_retention_time_5_mins_entry">5 mins</string>
    <string name="pref_entry_code_records_title">SMS code records</string>
    <string name="pref_entry_code_records_summary">Reserve %d recent records at most</string>
    <string name="pref_code_records_title">SMS Code Records</string>
    <string name="smscode_records">Code Records</string>
    <string name="edit_smscode_records">Edit Code Records</string>
    <string name="prompt_sms_code_copied">SMS Code copied: %s</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="some_items_removed">Removed %d record(s)</string>
    <string name="message_details">Message Details</string>
    <string name="copy_smscode">Copy Code</string>
    <string name="copy_sms">Copy Message</string>
    <string name="prompt_sms_copied">SMS copied</string>
    <string name="pref_enable_code_records_title">Reserve SMS code records</string>
    <string name="pref_match_rules">Match Rules</string>
    <string name="pref_smscode_keywords_title">Keywords</string>
    <string name="pref_smscode_keywords_summary">Keywords that SMS code contains(Regular Expressions)</string>
    <string name="reset">Reset</string>
    <string name="code_keywords_hint">Keywords(Regular Expressions)</string>
    <string name="pref_smscode_test_title">SMS code test</string>
    <string name="pref_smscode_test_summary">Test whether SMS code can be recognized or not</string>
    <string name="sms_content_hint">SMS content</string>
    <string name="test">Test</string>
    <string name="current_sms_code">Current SMS code is %s</string>
    <string name="cannot_parse_smscode">Cannot parse SMS code.</string>
    <string name="pref_experimental_title">Experimental</string>
    <string name="pref_mark_as_read_title">Mark as read</string>
    <string name="pref_mark_as_read_summary">Mark code SMS as read if succeed</string>
    <string name="pref_delete_sms_title">Delete SMS</string>
    <string name="pref_delete_sms_summary">Warning! Code SMS will be deleted if extract succeed</string>
    <string name="pref_kill_me_title">Kill me</string>
    <string name="pref_kill_me_summary">Kill this module app if extract succeed</string>
    <string name="pref_others_title">Others</string>
    <string name="pref_verbose_log_mode_title">Detailed log</string>
    <string name="pref_verbose_log_mode_summary">Print detailed log(only for debug)</string>
    <string name="pref_about_title">About</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_summary"><![CDATA[Current version: %1$s (%2$d)]]></string>
    <string name="pref_join_qq_group_title">Communication and Bug report</string>
    <string name="pref_join_qq_group_summary">QQ group: 478884682</string>
    <string name="prompt_join_qq_group_failed">Please install or enable QQ first</string>
    <string name="pref_source_code_title">Source code</string>
    <string name="browser_install_or_enable_prompt">Please install or enable browser first</string>
    <string name="pref_source_code_summary">Welcome to star ♪(＾∀＾●)ﾉ</string>
    <string name="pref_donate_by_alipay_title">Donate by Alipay</string>
    <string name="alipay_install_prompt">Please install Alipay</string>
    <string name="alipay_enable_prompt">Please enable Alipay</string>
    <string name="wechat_install_prompt">Please install Wechat</string>
    <string name="wechat_enable_prompt">Please enable Wechat</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="app_block_settings">App Block Settings</string>
    <string name="app_block_summary">Choose Apps that auto-input banned</string>
    <string name="action_sort">Sort Order</string>
    <string name="action_sort_by_label_asc">App name</string>
    <string name="action_sort_by_label_desc">App name(desc)</string>
    <string name="action_sort_by_pkg_asc">Package name</string>
    <string name="action_sort_by_pkg_desc">Package name(desc)</string>
    <string name="action_search">Search</string>
    <string name="action_accomplish">Accomplish</string>
    <string name="save_failed">Save failed, try it again.</string>
    <string name="load_failed">Load failed, try it again.</string>
    <string name="rule_company_hint">Institution or Company</string>
    <string name="rule_keyword_hint">SMS Code Keyword</string>
    <string name="rule_code_length">SMS code length</string>
    <string name="rule_code_regex_hint">SMS code regular expression</string>
    <string name="pref_code_rules_title">SMS code match rules</string>
    <string name="pref_code_rules_summary">Custom code match rules for specific SMS</string>
    <string name="quick_choose">Quick Choose</string>
    <string name="sms_code_type_digit_entry">Digit Only [0\-9]</string>
    <string name="sms_code_type_letter_entry">Letter Only [a\-zA\-Z]</string>
    <string name="sms_code_type_text_entry">Text [a\-zA\-Z0\-9]</string>
    <string name="action_rule_edit_done">Done</string>
    <string name="action_import_rules">Import</string>
    <string name="action_export_rules">Export</string>
    <string name="revoke">Revoke</string>
    <string name="removed">Removed</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="actions">Actions</string>
    <string name="list_empty_prompt">No items yet!</string>
    <string name="rule_list_empty_snack_prompt">Rule list is empty, no need to export.</string>
    <string name="code_length_empty_prompt">Please enter the code length</string>
    <string name="rule_company_empty_hint">Please enter institution or company</string>
    <string name="rule_keyword_empty_hint">Please enter SMS code keyword</string>
    <string name="rule_code_regex_empty_hint">Please enter SMS code regular expression</string>
    <string name="rule_duplicated_prompt">Rule exists, please reedit it or exit</string>
    <string name="rule_list">Code Rule List</string>
    <string name="create_rule">New Rule</string>
    <string name="edit_rule">Edit Rule</string>
    <string name="import_succeed">Import succeed</string>
    <string name="import_failed_version_missed">Import failed, version missed</string>
    <string name="import_failed_version_unknown">Import failed, version unknown</string>
    <string name="import_failed_backup_invalid">Import failed, backup invalid</string>
    <string name="import_failed_read_error">Import failed, read file error</string>
    <string name="export_succeed">Export succeed</string>
    <string name="export_failed">Export failed, try again please</string>
    <string name="import_confirmation_title">Import confirmation</string>
    <string name="import_confirmation_message">Retain current rules when import new rules?</string>
    <string name="importing">Importing</string>
    <string name="no_backup_exists">No backup file exists</string>
    <string name="choose_backup_file">Choose backup file</string>
    <string name="backup_file_dir">Backup location:\n%s</string>
    <string name="backup_file_name">Backup filename</string>
    <string name="exporting">Exporting</string>
    <string name="action_save_as_template">Save as template</string>
    <string name="save_template_succeed">Save template succeed</string>
    <string name="save_template_failed">Save template failed</string>
    <string name="action_rule_help">Help</string>
    <string name="share">Share</string>
    <string name="import_rules">Import Rules</string>
    <string name="no_permission_prompt">No relative permissions, reboot and try again</string>
    <string name="documents_ui_not_found">DocumentsUI app not found</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="paste_from_clipboard">Paste SMS from clipboard</string>
    <string name="theme_chooser_subtitle">Choose app appearance display mode</string>
    <string name="theme_system_title">System default</string>
    <string name="theme_system_summary">Follow device system dark/light theme</string>
    <string name="theme_light_title">Light mode</string>
    <string name="theme_light_summary">Always keep bright and clean</string>
    <string name="theme_dark_title">Dark mode</string>
    <string name="theme_dark_summary">Comfortable eye-care dark appearance</string>
</resources>